--- a/WebDev_Coursera/module2-solution/css/stylesheet.css
+++ b/WebDev_Coursera/module2-solution/css/stylesheet.css
@@ -2,7 +2,8 @@
 * { box-sizing: border-box;
  	font-family:cursive,helvetica,sans-serif;
 	}
-h1{ text-align:center; }
+h1{ text-align:center;
+font-size:2.5em; }
 p#mesageerror{display: none;}
 div#box1, #box2, #box3 
 			{
@@ -21,7 +22,8 @@ div#box1, #box2, #box3
 				margin-right: 0;
 				border:2px solid black;
 				text-align: center;
-				width: 140px;
+				width: 180px;
+				font-size: 1.75em;
 				
 			}
 
@@ -29,6 +31,7 @@ div#box1, #box2, #box3
 			{ 
 				padding:25px 2px 2px 10px;
 				top:10;
+				font-size: 1.25em;
 			}
 
 #titlu1
